manifests/networkpolicy/np-allow-consolidated.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-monitoring
  namespace: monitoring
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-falco
  namespace: falco
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
